# obby-jukebox

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yaml
k8s/: deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
src/obby_jukebox/: __init__.py  __main__.py  api.py  bottools.py  commands.py  config.py  fallback.py  ircconn.py  irctext.py  jellyfin.py  player.py  publisher.py  signaling.py  tracks.py
tests/: test_api.py  test_bottools.py  test_commands.py  test_fallback.py  test_ircconn.py  test_jellyfin.py  test_player.py  test_publisher.py  test_signaling.py  test_tracks.py
