[project]
name = "obby-jukebox"
version = "0.1.0"
description = "IRC video-stream jukebox bot: a yt-dlp queue streamed to an ObbyIRCd voice channel over WebRTC"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "aiortc>=1.9",
    "av>=13",
    "yt-dlp>=2025.1.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "irctokens>=2.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pillow>=11",
    "httpx>=0.28",
]

[project.scripts]
obby-jukebox = "obby_jukebox.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "mypy>=1.14",
    "ruff>=0.9",
    "pre-commit>=4.0",
]

[build-system]
requires = ["uv_build>=0.5"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "obby_jukebox"
module-root = "src"

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "RUF"]
# A MediaPlayer track exposes no awaitable for EOF, so the media loop polls it.
ignore = ["ASYNC110"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["aiortc.*", "av.*", "yt_dlp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["irctokens", "irctokens.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --cov=obby_jukebox --cov-report=term-missing"
